--- a/src/components/style/skills.css
+++ b/src/components/style/skills.css
@@ -10,6 +10,7 @@
 
 .skills-container {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
   max-width: 1024px;
