--- a/src/components/style/skills.css
+++ b/src/components/style/skills.css
@@ -10,7 +10,6 @@
 
 .skills-container {
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
   max-width: 1024px;
@@ -33,6 +32,8 @@
 
 /* Grid styling */
 .skills-grid {
+  justify-content: center;
+  align-items: center;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
