--- a/src/components/style/skills.css
+++ b/src/components/style/skills.css
@@ -28,14 +28,19 @@
   animation: pulse 1s infinite;
   transform: translateX(-100%);
   animation: slideInRight 1.5s forwards;
+  animation: pulse 1s infinite;
 }
-
+@media (min-width: 1024px) {
+  .skills-heading {
+      font-size: 3.5rem;
+  }
+}
 /* Grid styling */
 .skills-grid {
-  justify-items:center;
+  align-items: center;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
+  gap: 1.5rem;
   width: 100%;
   transform: translateX(-100%);
   animation: slideInLeft 1.5s forwards;
@@ -62,6 +67,13 @@
   transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
 
 }
+@media (min-width: 1024px) {
+  .skill-card {
+    padding: 2rem;
+  }
+}
+
+
 
 .skill-card:hover {
   transform: scale(1.1);
@@ -70,13 +82,19 @@
 
 /* Text styling */
 .skill-name {
-  font-size: 1.25rem;
+  font-size: 1.10rem;
   font-weight: 600;
   font-family: serif;
   color: rgb(25, 65, 93);
 }
+@media (min-width: 1024px) {
+  .skill-name {
+      font-size: 1.25rem;
+  }
+}
 
 .skill-level {
+  font-size: 1rem;
   color: rgb(11, 86, 139);
   margin-top: 0.5rem;
 }
