--- a/src/components/style/about.css
+++ b/src/components/style/about.css
@@ -3,7 +3,8 @@
 /* Container styling */
 .about-container {
     background-color: rgb(73, 101, 121);
-    min-height: 100vh;
+    width: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
     padding: 4rem 1rem;
@@ -16,10 +17,11 @@
   
   @media (min-width: 768px) {
     .about-container {
-      flex-direction: row;
+      flex-direction: column;
       padding: 4rem 5rem;
       justify-content: space-between;
       max-width: 100%;
+      height: auto;
     }
   }
   
