--- a/src/components/style/header.css
+++ b/src/components/style/header.css
@@ -5,7 +5,8 @@
     align-items: center;
     background-color: black;
     color: white;
-    width: 100%;   
+    width: 100%; 
+    height: auto;  
 }
 .logo{
     font-weight: 700;
