--- a/src/components/style/skills.css
+++ b/src/components/style/skills.css
@@ -1,7 +1,8 @@
 /* Section styling */
 .skills-section {
   background-color: rgb(146, 179, 202);
-  min-height: 100vh;
+  width: 100%;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
