--- a/src/components/style/hero.css
+++ b/src/components/style/hero.css
@@ -17,7 +17,7 @@ section {
 }
 
 /* Mobile layout (below 768px) */
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     .Main__container {
         flex-direction: column; /* Column layout for mobile */
     }
@@ -71,9 +71,17 @@ section {
 
 
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
     .img__section .Image {
         margin-left: 60px;
+        margin-bottom: 0px;
+        width: 100%;
+        height: 50%;
+    }
+}
+@media (min-width: 768px) {
+    .img__section .Image {
+        margin-top: 30px;
         margin-bottom: 0px;
         width: 100%;
         height: 50%;
@@ -104,16 +112,23 @@ section {
     color: rgb(137, 179, 209);
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
     .Main__heading {
         font-size: 60px;
         line-height: 1.2;
         margin-right: 40px;
     }
 }
+@media (min-width: 768px) {
+    .Main__heading {
+        font-size: 35px;
+        line-height: 1.2;
+        margin-right: 30px;
+    }
+}
 
 .sub__heading {
-    font-size: 22px;
+    font-size: 20px;
     font-family: serif;
     color: white;
     font-weight: 700;
@@ -125,11 +140,18 @@ section {
     color: rgb(137, 179, 209);
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
     .sub__heading {
         font-size: 50px;
         margin-right: 40px;
         
+    }
+}
+@media (min-width: 768px) {
+    .sub__heading {
+        font-size: 25px;
+        line-height: 1.2;
+        margin-right: 30px;
     }
 }
 
