--- a/src/components/style/about.css
+++ b/src/components/style/about.css
@@ -1,5 +1,4 @@
 /* about.css */
-
 /* Container styling */
 .about-container {
     background-color: rgb(73, 101, 121);
@@ -19,7 +18,7 @@
     .about-container {
       flex-direction: column;
       padding: 4rem 5rem;
-      justify-content: space-between;
+      justify-content: center;
       max-width: 100%;
       height: auto;
     }
@@ -27,7 +26,10 @@
   
   @media (min-width: 1024px) {
     .about-container {
+      height: 100vh;
       padding: 4rem 10rem;
+      justify-content: space-between;
+      flex-direction: row;
     }
   }
 
@@ -63,7 +65,7 @@
     box-shadow: 0px 10px 15px rgb(41, 42, 42) ;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     text-align: center;
     box-sizing: border-box;
@@ -78,7 +80,7 @@
     transform: scale(1.1);
   }
   
-  @media (min-width: 768px) {
+  @media (min-width: 1024px) {
     .about-content {
       width: 80%;
       max-width: 50rem;
@@ -104,7 +106,7 @@
     text-align: center;
 }
   
-  @media (min-width: 768px) {
+  @media (min-width: 1024px) {
     .about-heading {
       font-size: 3rem;
     }
