--- a/src/components/style/skills.css
+++ b/src/components/style/skills.css
@@ -12,6 +12,7 @@
 .skills-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   max-width: 1024px;
   text-align: center;
